--- a/content/guides/deps_and_cli.adoc
+++ b/content/guides/deps_and_cli.adoc
@@ -216,7 +216,7 @@ Specify local jar dependencies with a coordinate which includes a `:local/root` 
 ----
 {
  :deps {
-   org.clojure/clojure {:mvn/version "1.9.0-beta2"}
+   org.clojure/clojure {:mvn/version "1.9.0"}
    oracle/driver {:local/root "/path/to/oracle/driver.jar"}
  }
 }
@@ -232,7 +232,7 @@ In this case you refer to the local root directory rather than a particular file
 ----
 {
  :deps {
-   org.clojure/clojure {:mvn/version "1.9.0-beta2"}
+   org.clojure/clojure {:mvn/version "1.9.0"}
    my.company/sibling-project {:local/root "/path/to/project"}
  }
 }
