fix bug in getting started

--- a/content/guides/getting_started.adoc
+++ b/content/guides/getting_started.adoc
@@ -54,7 +54,7 @@ Not yet available - see Leiningen or Boot instead.
 
 == Local build
 
-You can build your own self-contained local jar using the Clojure Maven build:
+You can build your own self-contained local jar from the Clojure source:
 
 [source,shell]
 ----
