update learning links

--- a/content/guides/getting_started.adoc
+++ b/content/guides/getting_started.adoc
@@ -11,7 +11,7 @@ toc::[]
 
 Welcome to Clojure!
 
-Check out <<learn/syntax#,Learn Clojure>> pages or <<xref/../../community/resources#,Resources>> page to find tutorials and resources for learning the language!
+Check out <<learn/syntax#,Learn Clojure>>, <<xref/../../community/resources#,Resources>>, or <<xref/../../community/books#,Books>> for learning the language!
 
 == Clojure installer and CLI tools
 
